--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>'Fes - Sale System</title>
+  <title>Fes - Sale System</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-  <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+  <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
+  <link rel="shortcut icon" href="assets/images/favicon2.png" type="image/x-icon">
+  <!-- <link rel="stylesheet" href="assets/css/bootstrap.min.css"> -->
 </head>
 <body>
   <app-root></app-root>
